--- a/style.css
+++ b/style.css
@@ -7,19 +7,62 @@
 .container{
 display: flex;
 flex-direction: row;
+align-content: center;
 
 
 }
 
 body{
+    
+    background-color: rgb(239, 230, 255);
     height: 100%;
     width: 100%;
     display: flex;
    flex-direction: column;
+   
     align-items: center;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.clock-label{
+    color:  rgb(75, 67, 90);;
+    background-color: rgb(75, 67, 90);
+    border-radius: 5px;
+   Width: 100px;
+   height: 0px;
+   text-align: center;
+   padding-top: 10px;
+}
+
+
+
+.clock-input{
+    margin-top: 100px;
+    background-color: rgb(75, 67, 90); color: white; text-align: center;
+    height: 40px
+    ; width: 300px;
+    border-radius: 5px;
+}
+
+
 .clock-column{
-    padding: 10px;
+    padding: 10px; color:rgb(75, 67, 90);
+
+}
+
+.clock-day{
+    text-align: center; 
+}
+
+.clock-hours{
+    text-align: center;
+}
+
+.clock-minutes{
+    text-align: center;
+}
+
+.clock-seconds{
+    text-align: center; 
 }
